# pedestal-inference

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
docs/source/: analysis.rst  conf.py  index.rst  model.rst  models.rst  pedinf.rst
pedinf/: __init__.py  analysis.py  diagnostics.py  model.py  models.py  posterior.py  spectrum.py  spline.py  utils.py
pedinf/analysis/: __init__.py  inversions.py  pressure.py  profile.py  separatrix.py  utils.py
pedinf/models/: __init__.py  base.py  exspline.py  logispline.py  lpm.py  mtanh.py  utils.py
pedinf/spectrum/: __init__.py  jax.py  numba.py  numpy.py
tests/: benchmarking.py  data.py  test_PedestalModel.py  test_analysis.py  test_models.py  test_spectrum.py  test_spline.py
