[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pedestal-inference"
version = "0.2.3"
authors = [
  { name="Chris Bowman", email="chris.bowman.physics@gmail.com" },
]
description = "A collection of Python tools for plasma-edge Thomson-scattering analysis"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy >= 1.8",
    "scipy >= 1.6.3",
    "inference-tools >= 0.12.0",
]

[project.urls]
homepage = "https://github.com/C-bowman/pedestal-inference"
documentation = "https://pedestal-inference.readthedocs.io/"