[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pedinf", "pedinf.models", "pedinf.analysis"]

[project]
name = "pedestal-inference"
version = "0.3.0"
authors = [
  { name="Chris Bowman", email="chris.bowman.physics@gmail.com" },
]
description = "A collection of Python tools for plasma-edge Thomson-scattering analysis"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

requires-python = ">=3.7"
dependencies = [
    "numpy >= 1.20",
    "scipy >= 1.6.3",
    "inference-tools >= 0.12.0",
]

[project.urls]
homepage = "https://github.com/C-bowman/pedestal-inference"
documentation = "https://pedestal-inference.readthedocs.io/"

[project.optional-dependencies]
tests = [
    "pytest >= 3.3.0",
    "pytest-cov >= 3.0.0"
]