[metadata]
name = pedestal-inference
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/C-bowman/pedestal-inference
author = Chris Bowman
author_email = chris.bowman.physics@gmail.com
description = A collection of python tools for plasma-edge Thomson-scattering analysis
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source = https://github.com/C-bowman/pedestal-inference
    Tracker = https://github.com/C-bowman/pedestal-inference/issues

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy >= 1.8
    scipy >= 1.6.3
    inference-tools >= 0.8

[options.extras_require]
tests =
    pytest >= 3.3.0
    pytest-cov >= 3.0.0
docs =
    sphinx >= 4.0.2
    sphinx_rtd_theme

[build_sphinx]
source-dir = docs/source